--- a/app/client/src/containers/Organizations.css
+++ b/app/client/src/containers/Organizations.css
@@ -1,5 +1,4 @@
 .Organizations .lander {
-  padding: 30px 0;
   text-align: center;
 }
 
@@ -10,4 +9,8 @@
 
 .Organizations .lander p {
   color: #999;
+}
+
+thead th{
+	text-align: center;
 }
